# IPOL_AC_RANSAC

./: AUTHORS.txt  BUILD.txt  CHANGELOG.txt  LICENSE.txt  README.txt  license_BSD.txt
data/: carcassonne_all.txt  carcassonne_inliers.txt
src/: CMakeLists.txt
src/demo/: CMakeLists.txt  Rect.cpp  Rect.hpp  cmdLine.h  demo_orsa_fundamental.cpp  demo_orsa_homography.cpp  fundamental_graphical_output.cpp  fundamental_graphical_output.hpp  graphical_output.cpp  graphical_output.hpp  homography_graphical_output.cpp  homography_graphical_output.hpp  orsa_fundamental.cpp  orsa_homography.cpp  put_epipolar.cpp  show_epi.cpp  siftMatch.hpp  warping.cpp  warping.hpp
src/demo/libImage/: CMakeLists.txt  image.hpp  image_converter.hpp  image_crop.hpp  image_drawing.hpp  image_drawing_test.cpp  image_io.cpp  image_io.hpp  image_io_test.cpp  image_test.cpp  pixelTypes.hpp  sample.hpp
src/extras/: CMakeLists.txt
src/extras/libLWImage/: CMakeLists.txt  LWImage.cpp  LWImage.h
src/extras/libMatch/: CMakeLists.txt
src/extras/libNumerics/: CMakeLists.txt  ccmath_svd_test.cpp
src/extras/sift/: CMakeLists.txt  demo_lib_sift.cpp  demo_lib_sift.h  splines.cpp
src/libOrsa/: CMakeLists.txt  conditioning.cpp  conditioning.hpp  cubicRoots.h  cubicRoots_test.cpp  eval_model.cpp  eval_model.hpp  fundamental_model.cpp  fundamental_model.hpp  fundamental_model_test.cpp  fundamental_orsa_test.cpp  homography_model.cpp  homography_model.hpp  homography_model_test.cpp  homography_orsa_test.cpp  match.hpp  model_estimator.cpp  model_estimator.hpp  orsa.cpp  orsa.hpp  orsa_fundamental.cpp  orsa_fundamental.hpp  orsa_homography.cpp  orsa_homography.hpp  orsa_model.cpp  orsa_model.hpp  ransac.cpp  ransac.hpp  sampling.cpp  sampling.hpp
src/libOrsa/libNumerics/: CMakeLists.txt  ccmath_svd_test.cpp  cubicRoots_test.cpp  homography.h  matrix.cpp  matrix.h  numerics.cpp  numerics.h  svd.cpp  svd_test.cpp  vector.cpp
src/testing/: testing.h
